# ark_js_runtime

./: .gitignore  @  BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  \  bundle.json  js_runtime_config.gni  llvm.patch  ohos.build  run_test262.sh
ecmascript/builtins/tests/: BUILD.gn  builtins_array_test.cpp  builtins_arraybuffer_test.cpp  builtins_atomics_test.cpp  builtins_bigint_test.cpp  builtins_boolean_test.cpp  builtins_collator_test.cpp  builtins_dataview_test.cpp  builtins_date_test.cpp  builtins_date_time_format_test.cpp  builtins_displaynames_test.cpp  builtins_errors_test.cpp  builtins_finalizationregistry_test.cpp  builtins_function_test.cpp  builtins_intl_test.cpp  builtins_iterator_test.cpp  builtins_json_test.cpp  builtins_list_format_test.cpp  builtins_locale_test.cpp  builtins_map_test.cpp  builtins_math_test.cpp  builtins_number_format_test.cpp  builtins_number_test.cpp  builtins_object_test.cpp  builtins_plural_rules_test.cpp  builtins_promise_test.cpp  builtins_proxy_test.cpp  builtins_reflect_test.cpp  builtins_regexp_test.cpp  builtins_relative_time_format_test.cpp  builtins_set_test.cpp  builtins_sharedarraybuffer_test.cpp  builtins_string_iterator_test.cpp  builtins_string_test.cpp  builtins_symbol_test.cpp  builtins_typedarray_test.cpp  builtins_weak_map_test.cpp  builtins_weak_ref_test.cpp  builtins_weak_set_test.cpp
ecmascript/compiler/: BUILD.gn  aot_compiler.cpp  aot_file_manager.cpp  aot_file_manager.h  argument_accessor.cpp  argument_accessor.h  assembler_module.cpp  assembler_module.h  async_function_lowering.cpp  async_function_lowering.h  bc_call_signature.cpp  bc_call_signature.h  bytecode_circuit_builder.cpp  bytecode_circuit_builder.h  call_signature.cpp  call_signature.h  circuit.cpp  circuit.h  circuit_builder-inl.h  circuit_builder.cpp  circuit_builder.h  circuit_builder_helper-inl.h  circuit_builder_helper.cpp  circuit_builder_helper.h  circuit_ir_specification.md  circuit_optimizer.cpp  circuit_optimizer.h  circuit_visualizer.cpp  circuit_visualizer.h  code_generator.h  common_stubs.cpp  common_stubs.h  compile_llvm_lib.sh  compiler_log.h  compiler_macros.h  fast_stub.cpp  fast_stub.h  fast_stub_define.h  fastpath_optimizer.cpp  fastpath_optimizer.h  (+65 more)
ecmascript/compiler/assembler/: assembler.h  assembler_aarch64.cpp  assembler_aarch64.h  assembler_aarch64_constants.h  assembler_x64.cpp  assembler_x64.h  extended_assembler_x64.cpp  extended_assembler_x64.h
ecmascript/compiler/llvm/: BUILD.gn  llvm.patch  llvm_new.patch  llvm_stackmap_parser.cpp  llvm_stackmap_parser.h
ecmascript/compiler/mock/: mock_stub_m.cpp
ecmascript/compiler/tests/: BUILD.gn  circuit_optimizer_tests.cpp  satepoint_GC_0.ll  stub_optimizer_tests.cpp  stub_tests.cpp
ecmascript/compiler/type_inference/: type_infer.cpp  type_infer.h
ecmascript/ic/tests/: BUILD.gn  ic_binaryop_test.cpp  ic_compareop_test.cpp  ic_handler_test.cpp  ic_invoke_test.cpp  ic_runtime_stub_test.cpp  profile_type_info_test.cpp  properties_cache_test.cpp  property_box_test.cpp  proto_change_details_test.cpp
ecmascript/js_vm/: BUILD.gn  main.cpp
ecmascript/regexp/tests/: BUILD.gn  dyn_chunk_test.cpp  regexp_test.cpp
ecmascript/snapshot/mem/: BUILD.gn  constants.h  encode_bit.h  slot_bit.cpp  slot_bit.h  snapshot.cpp  snapshot.h  snapshot_env.cpp  snapshot_env.h  snapshot_processor.cpp  snapshot_processor.h  snapshot_serialize.cpp  snapshot_serialize.h
ecmascript/tests/: BUILD.gn  accessor_data_test.cpp  assert_scope_test.cpp  builtins_test.cpp  concurrent_marking_test.cpp  concurrent_sweep_test.cpp  dump_test.cpp  ecma_module_test.cpp  ecma_string_table_test.cpp  ecma_string_test.cpp  ecma_vm_test.cpp  gc_test.cpp  global_dictionary_test.cpp  glue_regs_test.cpp  huge_object_test.cpp  js_api_arraylist_iterator_test.cpp  js_api_arraylist_test.cpp  js_api_deque_iterator_test.cpp  js_api_deque_test.cpp  js_api_lightweightmap_test.cpp  js_api_lightweightset_test.cpp  js_api_linked_list_test.cpp  js_api_list_test.cpp  js_api_plain_array_test.cpp  js_api_queue_test.cpp  js_api_stack_iterator_test.cpp  js_api_stack_test.cpp  js_api_tree_map_iterator_test.cpp  js_api_tree_map_test.cpp  js_api_tree_set_iterator_test.cpp  js_api_tree_set_test.cpp  js_api_vector_iterator_test.cpp  js_api_vector_test.cpp  js_arguments_test.cpp  js_array_buffer_test.cpp  js_array_iterator_test.cpp  js_array_test.cpp  js_async_function_test.cpp  js_bigint_test.cpp  js_collator_test.cpp  (+43 more)
ecmascript/tooling/: BUILD.gn  debugger_service.cpp  debugger_service.h  dispatcher.cpp  dispatcher.h  front_end.h  js_pt_extractor.cpp  js_pt_extractor.h  js_pt_lang_ext.h  protocol_channel.h  protocol_handler.cpp  protocol_handler.h  pt_js_extractor.cpp  pt_js_extractor.h
ecmascript/tooling/agent/: debugger_impl.cpp  debugger_impl.h  heapprofiler_impl.cpp  heapprofiler_impl.h  js_backend.cpp  js_backend.h  js_pt_hooks.cpp  js_pt_hooks.h  profiler_impl.cpp  profiler_impl.h  runtime_impl.cpp  runtime_impl.h  tracing_impl.cpp  tracing_impl.h
ecmascript/tooling/backend/: debugger_api.cpp  debugger_api.h  debugger_executor.cpp  debugger_executor.h  js_debugger.cpp  js_debugger.h  js_debugger_interface.h  js_pt_extractor.cpp  js_pt_extractor.h  js_pt_hooks.cpp  js_pt_hooks.h  js_pt_location.h
ecmascript/tooling/base/: pt_events.cpp  pt_events.h  pt_json.cpp  pt_json.h  pt_params.cpp  pt_params.h  pt_returns.cpp  pt_returns.h  pt_script.cpp  pt_script.h  pt_types.cpp  pt_types.h
ecmascript/tooling/interface/: debugger_api.cpp  debugger_api.h  file_stream.cpp  file_stream.h  js_debug_interface.h  js_debugger.cpp  js_debugger.h  js_debugger_manager.h  js_pt_location.h  notification_manager.h  progress.h  stream.h
ecmascript/tooling/test/: BUILD.gn  api_test.h  debugger_api_test.cpp  debugger_commands_test.cpp  debugger_entry_test.cpp  debugger_events_test.cpp  (+15 more)
test/: copy_resource.py  run_ark_executable.py  run_test262.sh  test_helper.gni
test/aottest/: BUILD.gn  makefile  runtest.sh  runtestall.sh  version
test/asmtest/: BUILD.gn
test/fuzztest/: BUILD.gn
test/moduletest/: BUILD.gn
test/typeinfer/: BUILD.gn
(+1413 files in other folders)
